css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
  width: 100%;
  height: 100%;
}

main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*---fade----*/
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 0.7s;
  animation-name: fade;
  animation-duration: 0.7s;
}

@-webkit-keyframes fade {
  from {
    opacity: .2
  }

  to {
    opacity: 1
  }
}

@keyframes fade {
  from {
    opacity: .2
  }

  to {
    opacity: 1
  }
}

/*---fade end----*/


header {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.desktop-nav {
  display: none;
}

.desktop-button {
  display: none;
}

.mobile-nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.nav-bar {
  width: 85%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 20px 40px 20px;
}

/*--- SLIDER MENU----*/

.menu-button {
  position: absolute;
  top: 0.1em;
  left: 18em;
  background: transparent;
  border: none;
}

.slider-nav {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: #252b46;
  opacity: 95%;

  position: fixed;
  top: 0;
  z-index: 1;
  transform: translateX(100%);
  transition: transform ease-out 250ms;
}

.nav-open {
  transform: translateX(0);
}

.nav-close {
  transform: translateX(100%);
  transition: transform ease-out 250ms;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  height: 60vh;
  width: 80%;
}

nav ul li {
  font-family: 'Rubik', sans-serif;
  text-transform: uppercase;
  font-size: 20px;
  font-weight: 400;
  padding: 20px;
}

nav ul a {
  text-decoration: none;
  color: white;
}

.slider-wrap {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.slider-divider {
  width: 100%;
  background: hsl(228, 19%, 36%);
  height: 0.1px;
}

.slider-button {
  border: white solid 2px;
  background: transparent;
  border-radius: 5px;
  font-family: 'Rubik', sans-serif;
  color: white;
  text-transform: uppercase;
  font-size: 20px;
  font-weight: 400;
  padding: 10px 0;
  width: 100%;
  margin-top: 20px;
}

.slider-soc svg {
  padding: 0 20px;
}

/*---- SLIDER END---*/


#header-logo {
  width: 44%;
}

.header-img {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 40vh;
}

.header-img img {
  width: 95%;
  position: absolute;
}

.header-img .header-img-background {
  background-color: hsl(231, 69%, 60%);
  width: 80%;
  height: 210px;
  z-index: -1;
  position: absolute;
  right: 0;
  top: 60px;
  border-bottom-left-radius: 100px;
}

.header-buttons {
  margin: 0 auto;
}

.main-title-sec {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

.main-title-sec h1 {
  font-family: 'Rubik', sans-serif;
  text-align: center;
  font-weight: 500;
}

.main-title-sec p {
  font-family: 'Rubik', sans-serif;
  text-align: center;
  width: 80%;
  color: hsl(229, 8%, 60%);
  line-height: 27px;
}

.header-buttons {
  width: 90%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding-top: 20px;
}

.header-buttons button {
  border: none;
  border-radius: 6px;
  padding: 20px 15px;
  font-family: 'Rubik', sans-serif;
  font-size: 12px;
  font-weight: 500;
  box-shadow: hsl(235, 23%, 90%) 5px 5px 5px;
  width: 40%;
}

#chrome-button {
  background-color: hsl(231, 69%, 60%);
  color: white;

}

/*---------MOBILE FEATURES SECTION---------*/

.features {
  margin-top: 50px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.features-text {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/* ... */

